--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Des-Mensajes",
+  "name": "Des-CrowdDunding",
   "version": "1.0.0",
-  "description": "Es la aplicacion para enviar mensajes en la Blockchcain tron",
+  "description": "Es la aplicacion para hacer Crowd Funding en la Blockchain tron",
   "main": "tronbox.js",
   "directories": {
     "test": "test"
@@ -33,6 +33,8 @@
     "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "bootstrap": "^4.5.3",
+    "bs58": "^4.0.1",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "css-loader": "3.4.2",
@@ -54,21 +56,24 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.0",
+    "popper.js": "^1.16.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.13.1",
+    "react": "^16.14.0",
     "react-app-polyfill": "^1.0.6",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "resolve": "1.15.0",
-    "resolve-url-loader": "3.1.1",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
@@ -76,6 +81,7 @@
     "terser-webpack-plugin": "2.3.4",
     "tronweb": "^2.10.2",
     "ts-pnp": "1.1.5",
+    "typescript": "^4.0.3",
     "url-loader": "2.3.0",
     "webpack": "4.41.5",
     "webpack-dev-server": "^3.11.0",
