--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "bugs": {
     "url": ""
   },
+  "proxy": "https://api.trongrid.io/walletsolidity/getaccount",
   "homepage": "https://earntron.ml",
   "dependencies": {
     "@babel/core": "7.8.4",
@@ -37,6 +38,7 @@
     "bs58": "^4.0.1",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "cors": "^2.8.5",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -51,6 +53,7 @@
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "http-proxy-middleware": "^1.0.6",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
