--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "bugs": {
     "url": ""
   },
-  "proxy":"https://api.trongrid.io/*",
-  "homepage": "https://dogelino.com/",
+  "homepage": "https://tronmilenium.ml/",
   "dependencies": {
     "@babel/core": "7.8.4",
     "@svgr/webpack": "4.3.3",
