--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Des-CrowdDunding",
-  "version": "1.0.0",
+  "name": "crowdfunding-earntron",
+  "version": "1.2.2",
   "description": "Es la aplicacion para hacer Crowd Funding en la Blockchain tron",
   "main": "tronbox.js",
   "directories": {
@@ -15,12 +15,12 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/erik172014/Earn-Tron"
   },
-  "author": "",
+  "author": "Erick",
   "license": "Apache 2.0",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/erik172014/Earn-Tron"
   },
   "homepage": "https://earntron.ml",
   "dependencies": {
